<?xml version="1.0"?>
<package format="2">
  <name>obstacle-avoidance-turtlebot</name>
  <version>0.0.0</version>
  <description>This package implements a naive obstacle avoidance technique for Turtlebot 3 using planar laser range-finder. It has been tested using Turtlebot 3 simulation in Gazebo.</description>

  <maintainer email="sadmansakib.enan@gmail.com">Sadman Sakib Enan</maintainer>

  <license>TODO</license>
  <url type="website">https://github.com/enansakib/obstacle-avoidance-turtlebot.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
